# ImageReg

./: .gitignore  2d_mnist_registration.py  2d_sagittal_registration.py  CLAUDE.md  README.md  check_segmentation.py  pyproject.toml  setup.sh
DAREG/: __init__.py  main.py  main_motion.py  requirements.txt
DAREG/config/: __init__.py  config_loader.py  default_config.yaml
DAREG/configs/: README.md  svffd_high_precision.yaml
DAREG/data/: __init__.py  image_4d.py  image_pair.py  loader.py
DAREG/docs/: DEEPALI_INTEGRATION.md  ENHANCEMENT_PLAN.md  MIRTK_EQUIVALENCE.md  MIRTK_FFD_INVERSE_AND_FIX.md  MIRTK_PIPELINE_STEPS.md  MOTION_REGISTRATION_ARCHITECTURE.md  README.md
DAREG/gui/: config_gui.py
DAREG/postprocessing/: __init__.py  (+2 more)
dareg/: MOTION_PIPELINE_SPEC.md  __init__.py  cli.py  debug_alignment.py  main.py  main_motion.py  main_postprocess.py  monitor.py
deepali_reg/: MIRTK_Analysis_Reference.md  MIRTK_Anisotropic_Registration_Analysis.md  MIRTK_Exact_Pipeline_Implementation.md  MIRTK_Research_Findings.md  README.md  SEGMENTATION_TRANSFER_SUCCESS.md  deepali_implementation_plan.md  how_itksnap_handles_coordinate_differences.md  how_mirtk_handles_coordinate_differences.md  mirtk_on_the_fly_coordinate_transformation.md  mirtk_world_registration.py  visual_alignment_explanation.md  world_coordinate_alignment_check.py
inputs_OSAMRI016/: registration_config.yaml
inputs_testing/: registration_config.yaml
planning/: MIRTK_DEEPALI_EQUIVALENCE_PLAN.md  mirtk-deepali-equivalence-spec.md
sequential_reg_clean/: __init__.py  main_sequential_registration.py
(+85 files in other folders)
